# timedelta_nice_format

./: README.rst  pyproject.toml
src/timedelta_nice_format/: __init__.py  main.py
tests/: test_timedelta_nice_format.py
