[tool.poetry]
name = "timedelta_nice_format"
version = "0.1.0"
authors = ["Stanislav Prokopyev <stas.prokopiev@gmail.com>"]
description = "PYPI package with 2 functions to convert datetime.timedelta into string with nice format"
readme = "README.rst"
license="MIT"


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
